# Credit_risk_intelligence

./: .env.example  .gitignore  CLAUDE.md  README.md  demo_input.csv  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
credit-risk-intelligence/: .env.example  .gitignore  README.md  requirements.txt
credit-risk-intelligence/app/: streamlit_app.py
credit-risk-intelligence/docs/: architecture.md  data_strategy.md  gamma_import_final.md  gamma_import_v2.md  gamma_import_v3.md  技術報告.md  簡報腳本.md  面試講法_complete.md
credit-risk-intelligence/notebooks/: 00_eda.ipynb
credit-risk-intelligence/tests/: conftest.py  test_day2.py  test_day5.py
data/processed/: ensemble_weights.json  fusion_model.pt  fusion_model_aligned.pt  lstm_encoder.pt  predictions.csv  shap_values.pkl  xgb_fold_1.pkl  xgb_fold_2.pkl  xgb_fold_3.pkl  xgb_fold_4.pkl  xgb_fold_5.pkl
docs/: ADR.md  gamma_final_10min.md  gamma_import.md  gamma_import_v_presentation.md  speech_9min_v3.md  speech_9minv4.md  speech_only_final.md  speech_v2_9min.md  面試講法.md
docs/PowerBI/: powerbi_4page.pbix
docs/old/: gamma_credit_risk_deck_CN.md  gamma_import_credit_risk_deck_CN_v2.md  面試講法_complete.md
scripts/: clean_powerbi_dashboard_csv.py  export_for_powerbi.py  fix_figures.py  generate_predictions.py
src/data/: features_v2.py  lending_club_timeseries.py  text_preprocessor.py
src/inference/: generate_graph_embeddings.py  generate_lstm_embeddings.py  generate_tabular_embeddings.py  (+1 more)
tests/: test_day1.py  test_day3.py  test_day4.py  test_lc_timeseries.py  test_training_smoke.py
(+19 files in other folders)
